chrome fix for banner text not showing

--- a/MedixCollege/Content/responsiveslides.css
+++ b/MedixCollege/Content/responsiveslides.css
@@ -27,7 +27,6 @@
     .rslides img {
         display: block;
         height: auto;
-        float: left;
         width: 100%;
         border: 0;
     }
